--- a/src/cards.css
+++ b/src/cards.css
@@ -1,19 +1,14 @@
 html {
     font-family: "Raleway", "Helvetica", sans-serif;
     color: #0234c0;
-    
     width: 100%;
-    
-    
 }
 
 body{
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  height: 100vh;
   display: flex;
-  align-content: center;
+  align-items: center;
+  margin: 0;
 }
 
 .icon {color: #BCD2DA;}
@@ -59,7 +54,7 @@ body{
     /* display */
     margin: 0 auto;
     width: 710px;
-    border: 5px solid #CAD0D2;
+    border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
     display: flex;
