--- a/src/cards.css
+++ b/src/cards.css
@@ -9,6 +9,7 @@ body{
   display: flex;
   align-items: center;
   margin: 0;
+  padding: 20px;
 }
 
 .icon {color: #BCD2DA;}
@@ -87,17 +88,20 @@ body{
       flex-basis: auto;
     }
 
-      @media (max-width: 320px){
+      @media (max-width: 600px){
         body{
           display: flex;
           align-items: center;
           margin: 0 auto;
           width: 80%;
+          
         }
         .cardGroup{
           display: flex;
           flex-direction: column;
-          
+          height: 70%;
+          min-width: 250px;
+          width: 60%;
         }
         .cardGroup__card {
           /* flex-grow, flex-shrink, flex-basis */
@@ -115,6 +119,18 @@ body{
           flex-grow: 1;
           flex-basis: 1;
         }
+
+        @media (min-width:601px) and (max-width: 768px){
+          .cardGroup{
+            padding: 20px;
+            height: 40%;
+            
+          }
+
+        }
+
+        
+
         
 
     }
